--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Just the Docs
 description: A Jekyll theme for documentation
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://youngyun-kim.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://youngyun-kim.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 remote_theme: pmarsceill/just-the-docs
 
 permalink: pretty
