--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ heading_anchors: true
 # Aux links for the upper right navigation
 aux_links:
   "Just the Docs on GitHub":
-    - "//github.com/pmarsceill/just-the-docs"
+    - "//github.com/youngyun-kim/youngyun-kim.github.io/tree/master/docs"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: false
